MICS-11504 Correction of action dot
The action dot button contrains a + caracter, and since the
caracter "+" is not centered vertically I have added a
padding-bottom of 2 pixels to the class mcs-timeline_actionDot,
which is only used by this button.

--- a/app/react/src/styles/common/standardSegmentBuilder.less
+++ b/app/react/src/styles/common/standardSegmentBuilder.less
@@ -168,7 +168,7 @@
         border: none;
         outline: none;
         box-shadow: none;
-        padding: 0px;
+        padding: 0px 0px 2px 0px;
         margin: 0px;
         width: 16px;
         height: 16px;
